<resources>
    <string name="app_name">UPoints</string>
    <string name="login_title">Store Online - UPoints</string>
    <string name="login_footer">Powered By Technogosyo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_add">Add</string>
    <string name="action_search">Search</string>
    <string name="action_update">Update</string>

    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_user_registration">User Registration</string>
    <string name="title_activity_customer_registration">Customer Registration</string>
    <string name="title_activity_product_items">Product Details</string>
    <string name="title_activity_register_stock">Add Stock</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_pos">P.O.S.</string>
    <string name="title_customer">Customer</string>
    <string name="title_user">User Maintenance</string>
    <string name="title_items">Items</string>
    <string name="title_transaction">Transaction</string>
    <string name="title_products">Products</string>
    <string name="title_stocks">Stocks</string>
    <!-- <string name="title_register_stocks">Registered Stocks</string> -->
    <string name="title_register_stocks">Stocks</string>
    <string name="title_upload">Upload</string>
    <string name="title_download">Download Update</string>
    <string name="title_upoints_history">UPoints History</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_login">Incorrect username/password. Please try again.</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <string name="permission_rationale_camera">Camera permissions are needed for customer registration.</string>

    <!-- Text fields name -->
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="birth_date">Birth Date</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="remarks">Remarks</string>
    <string name="referral_code">Referral Code</string>
    <string name="username">Username</string>
    <string name="pass">Password</string>
    <string name="user_role">User Role</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">This feature is not yet available.</string>

    <!-- error messages -->
    <string name="error_first_name">First Name is required. \n</string>
    <string name="error_middle_name">Middle Name is required. \n</string>
    <string name="error_last_name">Last Name is required. \n</string>
    <string name="error_birth_date">Birth Date is required. \n</string>
    <string name="error_user_name">Username is required. \n</string>
    <string name="error_password">Password is required. \n</string>
    <string name="error_email">Email Address is required. \n</string>
    <string name="error_user_level">User Role is required. \n</string>
    <string name="error_picture">Picture is required. \n</string>
    <string name="error_date_delivered">Please select date delivered.</string>
    <string name="error_input_quantity">Please input how many.</string>
    <string name="failed_to_add">Failed to add new customer. Please try again.</string>
    <string name="failed_to_update">Failed to update list. Please try again.</string>
    <string name="failed_to_update_store">Failed to update store details. Please try again.</string>
    <string name="failed_to_add_stock">Failed to add new stock. Please try again.</string>
    <string name="no_connection">Unable to connect to server. Please check internet connection.</string>
    <string name="error_select_date">Please select date range.</string>
    <string name="error_date_from">Date from must be less than or equal to date today.</string>
    <string name="error_date_from_greater_to">Date from cannot be greater than date to.</string>
    <string name="error_date_to">Date to must be less than or equal to date today.</string>
    <string name="error_date_to_less_from">Date to cannot be less than date from.</string>
    <string name="error_delete_logged_user">Cannot delete logged in user.</string>
    <string name="error_delete_owner_user">Cannot delete owner\'s user.</string>
    <string name="error_category">Please select category.</string>
    <string name="error_add_stock">Failed to add new stock.</string>
    <string name="error_add_product_pic">Failed to add picture.</string>
    <string name="error_referral_code">Please provide referral code.</string>
    <string name="error_referral_invalid">Invalid referral code.\n\nUse your referral code to continue registration? </string>

    <!-- Successful messages -->
    <string name="success_add_customer">Successfully added new customer.</string>
    <string name="success_add_user">Successfully added new user.</string>
    <string name="success_update_user">Successfully updated user.</string>
    <string name="success_update_list">Successfully updated list.</string>
    <string name="success_update_store">Successfully updated store details.</string>
    <string name="success_add_stock">Successfully added new stock.</string>
    <string name="success_add_product_pic">Successfully added picture.</string>

    <!-- other text -->
    <string name="no_records_found">No records found.</string>
    <string name="loading">Loading...</string>

    <!-- delete text -->
    <string name="delete_user">Delete user?</string>

    <!-- update text -->
    <string name="update_items">Update item list?</string>
    <string name="update_dashboard">Update store details?</string>

    <!-- button text -->
    <string name="btn_ok">OK</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_no">No</string>
    <string name="btn_add_customer">Add Customer</string>

    <!-- Dashboard text -->
    <string name="store_owner">Store Owner: </string>
    <string name="store_isMTGStore">Is MTG Store: </string>
    <string name="store_appType">App Type: </string>
    <string name="store_totalPoints">Total UPoints: </string>
    <string name="store_remainingPoints">Remaining UPoints: </string>
    <string name="store_totalWDPoints">Total Withdraw UPoints: </string>

    <!-- User Roles text -->
    <string-array name="user_role_array">
        <item>Select User Role</item>
        <item>Admin</item>
        <item>Processor</item>
    </string-array>
    <string name="admin_code">Adm</string>
    <string name="processor_code">Pro</string>

    <!-- dialog menus -->
    <string-array name="dialog_menu">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>
    <string-array name="product_dialog_menu">
        <item>Add Picture</item>
    </string-array>

    <string-array name="product_menu">
        <item>Add Picture</item>
    </string-array>

    <!-- Image text -->
    <string name="add_image_text">Click camera icon below to add/change customer photo.</string>

    <!-- permission -->
    <string name="camera_permission">Please enable camera in app permission.</string>

    <!-- Customer List text -->
    <string name="cust_id">ID: </string>
    <string name="cust_name">Name: </string>
    <string name="cust_bday">BirthDate: </string>

    <!-- StoreItem List text -->
    <string name="item_id">Item ID</string>
    <string name="item_desc">Description</string>
    <string name="item_qty">Qty</string>
    <string name="item_type">Type</string>

    <!-- Product List text -->
    <string name="prod_id">Product ID: </string>
    <string name="prod_desc">Description:</string>
    <string name="prod_price">Selling Price:</string>
    <string name="prod_rebate">Personal:</string>
    <string name="prod_share">Share:</string>
    <string name="prod_serving">No. of Serving:</string>
    <string name="prod_items">Items:</string>
    <string name="prod_product">Product:</string>
    <string name="prod_category">Category:</string>
    <string name="prod_select_all">Select All</string>
    <string name="prod_select_one">Select One</string>

    <!-- Transaction List text -->
    <string name="tran_pur_ref">Purchase Ref.</string>
    <string name="tran_date">Date</string>
    <string name="tran_amount">Amount</string>
    <string name="tran_qty">Qty</string>

    <!-- User List text -->
    <string name="user_username">Username</string>
    <string name="user_fullname">Full Name</string>
    <string name="user_level">Level</string>

    <!-- Stocks List text -->
    <string name="stock_id">Item ID</string>
    <string name="stock_desc">Description</string>
    <string name="stock_qty">Qty</string>
    <string name="stock_type">Type</string>

    <!-- Registered Stocks text -->
    <string name="reg_stock_select_all">Select All</string>
    <string name="reg_stock_item">Items: </string>
    <string name="reg_stock_id">Item ID</string>
    <string name="reg_stock_desc">Description</string>
    <string name="reg_stock_qty">Qty</string>
    <string name="reg_stock_remaining_qty">Remaining Quantity</string>
    <string name="reg_stock_date">Date</string>
    <string name="reg_stock_date_delivered">Date delivered:</string>
    <string name="reg_stock_remaining_quantity">Remaining quantity:</string>

    <!-- UPoints History text -->
    <string name="upoints_reference">Reference</string>
    <string name="upoints_amount">Amt</string>
    <string name="upoints_upoints">UPoints</string>
    <string name="upoints_date">Date</string>
    <string name="upoints_old_upoints">Old UPoints</string>
    <string name="upoints_new_points">New UPoints</string>
    <string name="upoints_deposit_date">Deposit Date </string>
    <string name="upoints_from">From: </string>
    <string name="upoints_to">To: </string>

    <!-- Item Type text -->
    <string name="packs">Packs</string>
    <string name="pcs">PCS</string>
    <string name="box">Box</string>
    <string name="kilo">Kilo</string>
    <string name="grams">Grams</string>
    <string name="liter">Liter</string>
    <string-array name="Packs">
        <item>How many pack(s)?:</item>
        <item>Quantity per pack:</item>
        <item>Total Quantity:</item>
    </string-array>
    <string-array name="PCS">
        <item>How many pcs?:</item>
        <item>Quantity per pcs:</item>
        <item>Total pcs:</item>
    </string-array>
    <string-array name="Box">
        <item>How many box?:</item>
        <item>Quantity per box:</item>
        <item>Total quantity:</item>
    </string-array>
    <string-array name="Kilo">
        <item>How many kilo?:</item>
        <item>Grams per kilo:</item>
        <item>Total grams:</item>
    </string-array>
    <string-array name="Grams">
        <item>How many grams?:</item>
        <item>Grams:</item>
        <item>Total grams:</item>
    </string-array>
    <string-array name="Liter">
        <item>How many liter?:</item>
        <item>1 Liter(4 servings):</item>
        <item>Total quantity of serving:</item>
    </string-array>
</resources>
