<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:icon="@drawable/ic_save_white_24dp"
        android:title="@string/action_save"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:icon="@drawable/ic_add"
        android:title="@string/action_add"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_update"
        android:orderInCategory="100"
        android:icon="@drawable/ic_update"
        android:title="@string/action_update"
        android:visible="false"
        app:showAsAction="always" />
</menu>
