<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:name="com.android.stephen.mtgpos.fragment.TransactionFragment" >
    <TextView
        android:id="@+id/tvEmpty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="25dp"
        android:textColor="@android:color/secondary_text_dark"
        android:layout_centerInParent="true"
        android:text="@string/no_records_found"/>
    <android.support.v7.widget.RecyclerView
        android:layout_below="@+id/llTitle"
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <LinearLayout
        android:id="@+id/llTitle"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:text="@string/tran_pur_ref"
            android:textAppearance="?attr/textAppearanceListItem" />
        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/tran_date"
            android:textAppearance="?attr/textAppearanceListItem" />
        <TextView
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:text="@string/tran_amount"
            android:textAppearance="?attr/textAppearanceListItem" />
        <TextView
            android:id="@+id/qty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:text="@string/tran_qty"
            android:textAppearance="?attr/textAppearanceListItem" />
    </LinearLayout>
</RelativeLayout>
</layout>