<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:name="com.android.stephen.mtgpos.fragment.ProductsFragment" >
    <LinearLayout
        android:id="@+id/llTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:visibility="gone"
            android:id="@+id/id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:text="@string/prod_id"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:text="@string/prod_desc"
            android:textAppearance="?attr/textAppearanceListItem" />
        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:text="@string/prod_price"
            android:textAppearance="?attr/textAppearanceListItem" />
        <TextView
            android:id="@+id/rebate_points"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:text="@string/prod_rebate"
            android:textAppearance="?attr/textAppearanceListItem" />
        <TextView
            android:id="@+id/share_points"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:text="@string/prod_share"
            android:textAppearance="?attr/textAppearanceListItem" />
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_below="@+id/llTitle"
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>
