<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:name="com.android.stephen.mtgpos.fragment.RegisteredStocksFragment" >
    <LinearLayout
        android:id="@+id/llSearchStock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/reg_stock_item"
            android:layout_weight="2"
            android:textAppearance="?attr/textAppearanceListItem"/>

        <Spinner
            android:id="@+id/spnrItems"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"/>

        <ImageButton
            android:id="@+id/btnSearch"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:background="@drawable/bg_button_rounded"
            android:src="@drawable/ic_search"/>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/llSearchStock"
        android:id="@+id/llTitle"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:text="@string/reg_stock_id"
            android:textAppearance="?attr/textAppearanceListItem" />
        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/reg_stock_desc"
            android:textAppearance="?attr/textAppearanceListItem" />
        <TextView
            android:id="@+id/qty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/reg_stock_remaining_qty"
            android:textAppearance="?attr/textAppearanceListItem" />
        <TextView
            android:visibility="gone"
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:text="@string/reg_stock_date"
            android:textAppearance="?attr/textAppearanceListItem" />
    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/llSearchStock"
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <android.support.v7.widget.RecyclerView
        android:layout_below="@+id/llTitle"
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>
